--- a/AnimalShelter/Views/Home/Index.cshtml
+++ b/AnimalShelter/Views/Home/Index.cshtml
@@ -3,4 +3,5 @@
 }
 
 <h1>Welcome to the Animal Shelter!</h1>
-<p>@Html.ActionLink("See all animals", "Index", "Animals")</p> 
+<p>@Html.ActionLink("See all animals", "Index", "Types")</p> 
+<p>@Html.ActionLink("Add new animals!", "Create", "Types")</p>
